[tool.poetry]
name = "try_again"
version = "0.1.0"
description = ""
authors = ["bkuehlhorn <bkuehlhorn@acm.org>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
